syntax = "proto3";

package im_home_proto;
import "home_account.proto";

// 生成golang文件的目录
option go_package = "github.com/mimis-s/IM-Service/src/common/commonproto/im_home_proto";

// 好友信息状态
message FriendInfoStatus {
    UserInfo Friend = 1;
    bool IsUpdateHead = 2; // 是否更新过头像(客户端获取更新的时间在好友更新之前则为true)
}

// 下发好友列表状态
message FriendsStatusList {
    repeated FriendInfoStatus FriendsStatusList = 1;        // 好友状态
    repeated FriendInfoStatus SendFriendApplyList = 2;      // 发送好友申请列表
    repeated FriendInfoStatus ReceiveFriendApplyList = 3;   // 接收好友申请列表
}

// 添加好友
message ApplyFriendsReq {
    int64 ApplyFriendsID = 1;
}

message ApplyFriendsRes {
    UserInfo FriendInfo = 1;
}

// 同意好友申请
message AgreeFriendApplyReq {
    int64 FriendsID = 1;   // 对方的ID
}

message AgreeFriendApplyRes {
    int64 FriendsID = 1;
}

// 删除好友
message DelFriendsReq {
    int64 FriendsID = 1;
}

message DelFriendsRes {
    int64 FriendsID = 1;
}